--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit
 google-generativeai
 ics
-google-api-python-client  <-- 이거 추가
-google-auth               <-- 이거 추가
+google-api-python-client  
+google-auth               
+
